welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: unclosed character literal
	while ('vuBiscuit==false') {
                                ^